[package]
name = "org-impaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.58"
# the ImageData has shape (height, width, channels)
arboard = "2.1.1"
emacs = "0.18.0"
image = "0.24.2"
reqwest = { version = "0.11.11", features = ["blocking", "mime_guess", "default-tls"], default-features = false }
sha2 = "0.10.2"
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"] }
